--- a/history/swiper/swiper_history.html
+++ b/history/swiper/swiper_history.html
@@ -3,32 +3,70 @@
 
 <head>
     <title>VGK CSS History</title>
-    <meta author="Henry Burke- Web Dev Intern">
+    <meta author="Henry Burke- Web Dev Intern" charset="UTF-8">
     <link rel="stylesheet" href="swiper_style.css">
 </head>
 
 <body>
-    <div class="tl-grid-container">
-        <a href="year_1_tl.html">Year 1</a>
-        <a href="#">Year 2</a>
-        <a href="#">Year 3</a>
-        <a href="#">Year 4</a>
-        <a href="#">Year 5</a>
-        <a href="#">Year 6</a>
-        <a href="#">Year 7</a>
-        <a href="#">Year 8</a>
-        <a href="#">Year 9</a>
-        <a href="#">Year 10</a>
-        <a href="#">Year 11</a>
-        <a href="#">Year 12</a>
-        <a href="#">Year 13</a>
-        <a href="#">Year 14</a>
-        <a href="#">Year 15</a>
-        <a href="#">Year 16</a>
-        <a href="#">Year 17</a>
-        <a href="#">Year 18</a>
-        <a href="#">Year 19</a>
-        <a href="#">Year 20</a>
+    <h1>Vegas Golden Knights History</h1>
+    <div class="tl-container">
+        <!-- 2017 thru 2022 -->
+        <h2 class="year">2017-18</h2>
+        <h2 class="year">2018-19</h2>
+        <h2 class="year">2019-20</h2>
+        <h2 class="year">2020-21</h2>
+        <h2 class="year">2021-22</h2>
+        <input checked type="radio" name="year-selector" data-description="2017-18">
+        <input type="radio" name="year-selector" data-description="2018-19">
+        <input type="radio" name="year-selector" data-description="2019-20">
+        <input type="radio" name="year-selector" data-description="2020-21">
+        <input type="radio" name="year-selector" data-description="2021-22">
+
+
+        <!-- 2022 thru 2027 -->
+        <h2 class="year">2022-23</h2>
+        <h2 class="year">2023-24</h2>
+        <h2 class="year">2024-25</h2>
+        <h2 class="year">2025-26</h2>
+        <h2 class="year">2026-27</h2>
+        <input type="radio" name="year-selector" data-description="2022-23">
+        <input type="radio" name="year-selector" data-description="2023-24">
+        <input type="radio" name="year-selector" data-description="2024-25">
+        <input type="radio" name="year-selector" data-description="2025-26">
+        <input type="radio" name="year-selector" data-description="2026-27">
+    </div>
+
+    <div class="info-container">
+        <div class="history-info" data-description="2017-18">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2018-19">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2019-20">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2020-21">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2021-22">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2022-23">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2023-24">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2024-25">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2025-26">
+            <p>test paragraph</p>
+        </div>
+        <div class="history-info" data-description="2026-27">
+            <p>test paragraph</p>
+        </div>
     </div>
 </body>
 
