--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <title>VGK Timeline</title>
+    <title>Team History | Vegas Golden Knights</title>
     <meta author="Henry Burke-Web Development Intern" charset="UTF-8">
     <link rel="stylesheet" , href="vgk_timeline_style.css">
     <script src="vgk_timeline.js" defer></script>
@@ -83,34 +82,137 @@
         </div>
     </div>
     <div class="info-wrapper" id="timeline-info-block">
-        <button class="back-button">Back to Timeline</button>
-        <div class="year-info active">
-            <p>test1</p>
+        <div class="back-button-wrapper">
+            <button class="back-button">
+                <span>Back to Timeline</span>
+            </button>
         </div>
+
+        <div class="year-info active">
+            <h2>Year One ~ 2017-18</h2>
+            <div class="img-container">
+                <img src="https://i.pinimg.com/originals/fe/1b/10/fe1b10f84e3eb7a24cf08dd3d04b439a.jpg">
+            </div>
+            <div class="time-post">
+                <div class="left reveal">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="dot"></div>
+                <div class="center-line"></div>
+                <div class="right reveal">
+
+                    <blockquote>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                            ut
+                            aliquip
+                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum
+                            dolore eu
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                            officia
+                            deserunt mollit anim id est laborum.</p>
+                        <footer><cite>-Random Quote, 1903</cite></footer>
+                    </blockquote>
+
+                </div>
+            </div>
+
+            <div class="time-post">
+                <div class="left reveal">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="dot"></div>
+                <div class="center-line"></div>
+                <div class="right reveal">
+                    <h3>Expansion Draft</h3>
+                    <img src="https://cms.nhl.bamgrid.com/images/photos/290058920/1024x576/cut.jpg">
+                </div>
+            </div>
+            <div class="back-button-wrapper">
+                <button class="back-button">
+                    <span>Back to Timeline</span>
+                </button>
+            </div>
+        </div>
+
+
         <div class="year-info">
             <p>test2</p>
         </div>
+
+
         <div class="year-info">
             <p>test3</p>
         </div>
+
+
         <div class="year-info">
             <p>test4</p>
         </div>
+
+
         <div class="year-info">
             <p>test5</p>
         </div>
+
+
         <div class="year-info">
             <p>test6</p>
         </div>
+
+
         <div class="year-info">
             <p>test7</p>
         </div>
+
+
         <div class="year-info">
             <p>test8</p>
         </div>
+
+
         <div class="year-info">
             <p>test9</p>
         </div>
+
+
         <div class="year-info">
             <p>test10</p>
         </div>
