--- a/index.html
+++ b/index.html
@@ -12,87 +12,109 @@
 
     <div class="tl-wrapper">
         <div class="input-container">
-            <h2 class="header-year-select active">2017-18</h2>
+            <h2 class=" active">2017-18</h2>
             <div class="time-line before active"></div>
             <button class="button-year-select active" aria-label="2017-18" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2018-19</h2>
+            <h2 class="">2018-19</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2018-19" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2019-20</h2>
+            <h2 class="">2019-20</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2019-20" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2020-21</h2>
+            <h2 class="">2020-21</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2020-21" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2021-22</h2>
+            <h2 class="">2021-22</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2021-22" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2022-23</h2>
+            <h2 class="">2022-23</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2022-23" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2023-24</h2>
+            <h2 class="">2023-24</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2023-24" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2024-25</h2>
+            <h2 class="">2024-25</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2024-25" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2025-26</h2>
+            <h2 class="">2025-26</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2025-26" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
         <div class="input-container">
-            <h2 class="header-year-select">2026-27</h2>
+            <h2 class="">2026-27</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2026-27" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
     </div>
+
+    <div class="under-tl-ad">
+        <!-- <img class="ad"
+            src="https://conceptdraw.com/a1703c3/p1/preview/640/pict--street-advertising-advertising---vector-stencils-library.png--diagram-flowchart-example.png"> -->
+    </div>
+
     <div class="info-wrapper" id="timeline-info-block">
-        <div class="back-button-wrapper">
-            <button class="back-button">
-                <span>Back to Timeline</span>
-            </button>
+        <div class="nav-button-wrapper">
+            <button class="nav-button"><span>Previous Year</span></button>
+            <button class="nav-button back-button"><span>Back to Timeline</span></button>
+            <button class="nav-button"><span>Next Year</span></button>
         </div>
 
         <div class="year-info active">
-            <h2>Year One ~ 2017-18</h2>
-            <div class="img-container">
-                <img src="https://i.pinimg.com/originals/fe/1b/10/fe1b10f84e3eb7a24cf08dd3d04b439a.jpg">
+
+            <div class="major-events-nav nav-button-wrapper">
+                <button class="nav-button"><span>Major Event 1</span></button>
+                <button class="nav-button"><span>Major Event 2</span></button>
+                <button class="nav-button"><span>Major Event 3</span></button>
             </div>
+
+            <div class="year-header-wrapper">
+                <!-- <img class="ad"
+                    src="https://conceptdraw.com/a1703c3/p1/preview/640/pict--street-advertising-advertising---vector-stencils-library.png--diagram-flowchart-example.png"> -->
+
+                <h2>Year One ~ 2017-18</h2>
+
+                <img class="header-background"
+                    src="https://i.pinimg.com/originals/fe/1b/10/fe1b10f84e3eb7a24cf08dd3d04b439a.jpg">
+
+                <!-- <img class="ad"
+                    src="https://conceptdraw.com/a1703c3/p1/preview/640/pict--street-advertising-advertising---vector-stencils-library.png--diagram-flowchart-example.png"> -->
+            </div>
+
             <div class="time-post">
                 <div class="left reveal">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -113,6 +135,14 @@
                         dolore eu
                         fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                         deserunt mollit anim id est laborum.</p>
+                    <div class="learn-button-wrapper">
+                        <a class="learn-more" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
+                            <span class="circle" aria-hidden="true">
+                                <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">Learn More</span>
+                        </a>
+                    </div>
                 </div>
                 <div class="dot"></div>
                 <div class="center-line"></div>
@@ -133,7 +163,6 @@
                             deserunt mollit anim id est laborum.</p>
                         <footer><cite>-Random Quote, 1903</cite></footer>
                     </blockquote>
-
                 </div>
             </div>
 
@@ -157,6 +186,14 @@
                         dolore eu
                         fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                         deserunt mollit anim id est laborum.</p>
+                    <div class="learn-button-wrapper">
+                        <a class="learn-more" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
+                            <span class="circle" aria-hidden="true">
+                                <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">Learn More</span>
+                        </a>
+                    </div>
                 </div>
                 <div class="dot"></div>
                 <div class="center-line"></div>
@@ -165,13 +202,13 @@
                     <img src="https://cms.nhl.bamgrid.com/images/photos/290058920/1024x576/cut.jpg">
                 </div>
             </div>
-            <div class="back-button-wrapper">
-                <button class="back-button">
+            <div class="nav-button-wrapper">
+                <button class="nav-button back-button">
                     <span>Back to Timeline</span>
                 </button>
             </div>
+            <div style="clear:both;height:1px;overflow:none;"></div>
         </div>
-
 
         <div class="year-info">
             <p>test2</p>
@@ -216,7 +253,15 @@
         <div class="year-info">
             <p>test10</p>
         </div>
+
+        <!-- <div class="nav-button-wrapper end">
+            <button class="nav-button"><span>Previous Year</span></button>
+            <button class="nav-button back-button"><span>Back to Timeline</span></button>
+            <button class="nav-button"><span>Next Year</span></button>
+        </div> -->
+
     </div>
+
 </body>
 
 </html>
