--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </div>
 
     <div class="info-wrapper" id="timeline-info-block">
-        <div class="nav-button-wrapper">
+        <div class="sticky-listener"></div>
+        <div class="nav-button-wrapper sticky">
             <button class="nav-button"><span>Previous Year</span></button>
             <button class="nav-button back-button"><span>Back to Timeline</span></button>
             <button class="nav-button"><span>Next Year</span></button>
@@ -96,7 +97,7 @@
 
         <div class="year-info active">
 
-            <div class="major-events-nav nav-button-wrapper">
+            <div class="major-events-nav">
                 <button class="nav-button"><span>Major Event 1</span></button>
                 <button class="nav-button"><span>Major Event 2</span></button>
                 <button class="nav-button"><span>Major Event 3</span></button>
@@ -202,12 +203,6 @@
                     <img src="https://cms.nhl.bamgrid.com/images/photos/290058920/1024x576/cut.jpg">
                 </div>
             </div>
-            <div class="nav-button-wrapper">
-                <button class="nav-button back-button">
-                    <span>Back to Timeline</span>
-                </button>
-            </div>
-            <div style="clear:both;height:1px;overflow:none;"></div>
         </div>
 
         <div class="year-info">
