--- a/index.html
+++ b/index.html
@@ -11,70 +11,70 @@
     <h1>VEGAS GOLDEN KNIGHTS HISTORY</h1>
 
     <div class="tl-wrapper">
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class=" active">2017-18</h2>
             <div class="time-line before active"></div>
             <button class="button-year-select active" aria-label="2017-18" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2018-19</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2018-19" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2019-20</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2019-20" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2020-21</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2020-21" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2021-22</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2021-22" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2022-23</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2022-23" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2023-24</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2023-24" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2024-25</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2024-25" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2025-26</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2025-26" href="#timeline-info-block"></button>
             <div class="time-line after"></div>
         </div>
 
-        <div class="input-container">
+        <div class="year-input-container">
             <h2 class="">2026-27</h2>
             <div class="time-line before"></div>
             <button class="button-year-select" aria-label="2026-27" href="#timeline-info-block"></button>
@@ -90,24 +90,23 @@
     <div class="info-wrapper" id="timeline-info-block">
         <div class="sticky-listener"></div>
         <div class="nav-button-wrapper sticky">
-            <button class="nav-button"><span>Previous Year</span></button>
+            <button class="nav-button prev"><span>Previous Year</span></button>
             <button class="nav-button back-button"><span>Back to Timeline</span></button>
-            <button class="nav-button"><span>Next Year</span></button>
+            <button class="nav-button next"><span>Next Year</span></button>
         </div>
 
         <div class="year-info active">
-
-            <div class="major-events-nav">
-                <button class="nav-button"><span>Major Event 1</span></button>
-                <button class="nav-button"><span>Major Event 2</span></button>
-                <button class="nav-button"><span>Major Event 3</span></button>
+            <div class="major-events-wrapper">
+                <button class="major-button"><span>Major Event 1</span></button>
+                <button class="major-button"><span>Major Event 2</span></button>
+                <button class="major-button"><span>Major Event 3</span></button>
             </div>
 
             <div class="year-header-wrapper">
                 <!-- <img class="ad"
                     src="https://conceptdraw.com/a1703c3/p1/preview/640/pict--street-advertising-advertising---vector-stencils-library.png--diagram-flowchart-example.png"> -->
 
-                <h2>Year One ~ 2017-18</h2>
+                <h2>Year One<br>2017-18</h2>
 
                 <img class="header-background"
                     src="https://i.pinimg.com/originals/fe/1b/10/fe1b10f84e3eb7a24cf08dd3d04b439a.jpg">
@@ -148,7 +147,6 @@
                 <div class="dot"></div>
                 <div class="center-line"></div>
                 <div class="right reveal">
-
                     <blockquote>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -248,15 +246,7 @@
         <div class="year-info">
             <p>test10</p>
         </div>
-
-        <!-- <div class="nav-button-wrapper end">
-            <button class="nav-button"><span>Previous Year</span></button>
-            <button class="nav-button back-button"><span>Back to Timeline</span></button>
-            <button class="nav-button"><span>Next Year</span></button>
-        </div> -->
-
     </div>
-
 </body>
 
 </html>
