--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>Team History | Vegas Golden Knights</title>
     <meta author="Henry Burke-Web Development Intern" charset="UTF-8">
     <link rel="stylesheet" , href="vgk_timeline_style.css">
-    <script src="test.js" defer></script>
+    <script src="vgk_timeline.js" defer></script>
 </head>
 
 <body>
     <div class="first-page">
-        <p style="color: black; font-size:small">replace beige background-color with background-image that has
+        <p style="color: black; font-size:small">replace first page background-color with background-image that has
             transparent gradient at bottom to fade into page's gradient</p>
 
         <h1>VEGAS GOLDEN KNIGHTS HISTORY</h1>
-        
+
         <div class="tl-wrapper">
             <div class="year-input-container">
                 <h2 class=" active">2017-18</h2>
